circular sequencing emulation